# tyto

./: Cargo.toml  README.md  config.toml
data/: database.txt  endpoints
docs/: endpoints.docx
migrations/: 001_init.sql
src/: config.rs  constants.rs  db.rs  emailer.rs  endpoints.rs  error.rs  main.rs  state.rs  types.rs  user_management.rs  utils.rs
src/core/: traits.rs
src/endpoints/: health.rs  urls.rs  users.rs
